--- a/LaboratoriAnalizav/LaboratoriAnalizav/wwwroot/css/site.css
+++ b/LaboratoriAnalizav/LaboratoriAnalizav/wwwroot/css/site.css
@@ -1,16 +1,14 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification\ 
 for details on configuring this project to bundle and minify static web assets. */
+
 body {
     padding-top: 50px;
-    padding-bottom: 20px;
+    overflow-x: hidden;
 }
 
 /* Wrapping element */
 /* Set some basic padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
-}
+
 
 /* Carousel */
 .carousel-caption p {
@@ -32,6 +30,877 @@ body {
 @media screen and (max-width: 767px) {
     /* Hide captions */
     .carousel-caption {
+        display: none;
+    }
+}
+
+.header {
+    background-color: #3e5669;
+    border-bottom: rgb(77, 189, 197) 4px solid;
+    padding: 8px;
+}
+
+.side-nav {
+    margin-right: 150px;
+}
+
+.navbar-inverse .navbar-nav > li > a {
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.navbar-inverse .navbar-brand {
+    color: white;
+    font-size: 22px;
+    font-weight: bold;
+}
+
+#nav {
+    float: right;
+}
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    display: block;
+    height: 9vh;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    background: #262626;
+}
+
+    footer p {
+        color: white;
+        text-align: center;
+    }
+
+    footer ul {
+        width: 14%;
+        margin-left: auto;
+        margin-right: auto;
+        display: flex;
+        padding-top: 0px;
+    }
+
+        footer ul li {
+            position: relative;
+            vertical-align: middle;
+            display: block;
+            color: #666;
+            font-size: 30px;
+            padding-left: 0px;
+            height: 50px;
+            width: 31%;
+            background: #262626;
+            line-height: 60px;
+            border-radius: 50%;
+            margin: 0 5px;
+            cursor: pointer;
+        }
+
+.foto {
+    min-height: 400px;
+    background-image: linear-gradient(rgba(5, 4, 4, 0.788),rgba(0, 0, 0, 0.4)),url("../images/back1.jpg");
+    background-position: 100%;
+    text-align: center;
+    color: white;
+    font-size: 25px;
+    font-family: 'Times New Roman', Times, serif;
+    font-style: italic;
+    width: 85%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    border-radius: 42px;
+}
+
+#foto2 {
+    min-height: 800px;
+    background-image: linear-gradient(rgb(5 4 4 / 25%),rgb(255 255 255 / 16%),rgb(0 0 0 / 12%));
+    background-position: 100%;
+    text-align: center;
+    color: white;
+    font-size: 25px;
+    font-family: 'Times New Roman', Times, serif;
+    font-style: italic;
+    width: 85%;
+    border-radius: 42px;
+    margin-bottom: 20%;
+}
+
+#heading1 {
+    overflow: hidden;
+    border-radius: 43px;
+    padding-top: 10%;
+}
+
+.slider {
+    width: 85%;
+    text-align: center;
+    overflow: hidden;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: white;
+}
+
+.foto2 {
+    padding-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    flex-shrink: 0;
+    width: 880px;
+    height: 320px;
+    border-radius: 10px;
+    background: #eee;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 100px;
+}
+
+#foto2 ul li {
+    list-style-type: none;
+}
+
+#foto2 img {
+    border-radius: 15px;
+    width: 50%;
+}
+
+.connect ul {
+    display: inline;
+}
+
+.connect {
+    margin-top: -9%;
+    margin-right: 10px;
+    float: right;
+}
+
+    .connect li {
+        display: inline;
+        cursor: pointer;
+        padding: 10px;
+        font-weight: bolder;
+        font-style: normal;
+        font-family: Arial;
+    }
+
+    .connect a {
+        color: white;
+        text-decoration: none;
+    }
+/*services*/
+.service-grid {
+    background: #fcfcfc;
+}
+
+.service-title h4 {
+    position: relative;
+    display: inline-block;
+}
+
+.service-icon {
+    position: relative;
+}
+
+.service-title p {
+    padding: 0 190px;
+    margin-bottom: 10px;
+}
+
+.about-info-text h2 {
+    margin-bottom: 23px;
+    text-transform: capitalize;
+    font-weight: 700;
+    line-height: .9;
+}
+
+.about-info-text p {
+    padding: 0 100px;
+    font-size: 18px;
+    margin-bottom: 26px;
+    position: relative;
+}
+
+.about-content p {
+    margin-bottom: 0;
+}
+
+.about-info-text a {
+    margin-bottom: 20px;
+    position: relative;
+}
+
+.service-icon i {
+    font-size: 40px;
+    color: #e8bc00;
+    margin-bottom: 20px;
+    display: inline-block;
+}
+
+.service-wrap {
+    border: 1px solid #afc8c6;
+    padding: 50px 30px;
+    margin-bottom: 16%;
+    position: relative;
+}
+
+    .service-wrap p {
+        position: relative;
+    }
+
+    .service-wrap:hover {
+        background-image: url("../images/foto1.jpg");
+        background-size: cover;
+        background-position: center center;
+        background-attachment: local;
+        transition: all .5s;
+    }
+
+        .service-wrap:hover:before {
+            background: rgba(0, 0, 0, 0.2901960784313726);
+            position: absolute;
+            height: 100%;
+            width: 100%;
+            left: 0px;
+            content: "";
+            top: 0;
+            opacity: 1;
+        }
+
+        .service-wrap:hover h4, .service-wrap:hover p {
+            color: #fff;
+        }
+
+    .service-wrap h4 {
+        font-weight: 600;
+        color: #1e2331;
+        font-size: 18px;
+        text-transform: capitalize;
+        position: relative;
+    }
+
+    .service-wrap a {
+        font-size: 14px;
+        font-weight: 600;
+        position: relative;
+    }
+
+.row {
+    margin-top: 4%;
+}
+
+/*Terminet*/
+
+.tableTerminet {
+    color: #566787;
+    background: #f5f5f5;
+    font-family: 'Varela Round', sans-serif;
+    font-size: 13px;
+    margin-top: 5%;
+}
+
+.table-wrapper {
+    background: #fff;
+    padding: 20px 25px;
+    margin: 30px 0;
+    border-radius: 3px;
+    box-shadow: 0 1px 1px rgba(0,0,0,.05);
+}
+
+.table-title {
+    padding-bottom: 15px;
+    background: #435d7d;
+    color: #fff;
+    padding: 40px 30px;
+    margin: -19px -25px 10px;
+    border-radius: 3px 3px 0 0;
+}
+
+    .table-title h2 {
+        margin: 5px 0 0;
+        font-size: 24px;
+    }
+
+    .table-title .btn-group {
+        float: right;
+    }
+
+    .table-title .btn {
+        color: #fff;
+        float: right;
+        font-size: 13px;
+        border: none;
+        min-width: 50px;
+        border-radius: 2px;
+        border: none;
+        outline: none !important;
+        margin-top: -7%;
+    }
+
+        .table-title .btn i {
+            float: left;
+            font-size: 21px;
+            margin-right: 5px;
+        }
+
+        .table-title .btn span {
+            float: left;
+        }
+
+#myInput {
+    margin-top: 1%;
+}
+
+table.table tr th, table.table tr td {
+    border-color: #e9e9e9;
+    padding: 12px 15px;
+    vertical-align: middle;
+}
+
+    table.table tr th:first-child {
+        width: 60px;
+    }
+
+    table.table tr th:last-child {
+        width: 100px;
+    }
+
+table.table-striped tbody tr:nth-of-type(odd) {
+    background-color: #fcfcfc;
+}
+
+table.table-striped.table-hover tbody tr:hover {
+    background: #f5f5f5;
+}
+
+table.table th i {
+    font-size: 13px;
+    margin: 0 5px;
+    cursor: pointer;
+}
+
+table.table td:last-child i {
+    opacity: 0.9;
+    font-size: 22px;
+    margin: 0 5px;
+}
+
+table.table td a {
+    font-weight: bold;
+    color: #566787;
+    display: inline-block;
+    text-decoration: none;
+    outline: none !important;
+}
+
+    table.table td a:hover {
+        color: #2196F3;
+    }
+
+    table.table td a.edit {
+        color: #FFC107;
+    }
+
+    table.table td a.delete {
+        color: #F44336;
+    }
+
+table.table td i {
+    font-size: 19px;
+}
+
+table.table .avatar {
+    border-radius: 50%;
+    vertical-align: middle;
+    margin-right: 10px;
+}
+
+.pagination {
+    float: right;
+    margin: 0 0 5px;
+}
+
+    .pagination li a {
+        border: none;
+        font-size: 13px;
+        min-width: 30px;
+        min-height: 30px;
+        color: #999;
+        margin: 0 2px;
+        line-height: 30px;
+        border-radius: 2px !important;
+        text-align: center;
+        padding: 0 6px;
+    }
+
+        .pagination li a:hover {
+            color: #666;
+        }
+
+    .pagination li.active a, .pagination li.active a.page-link {
+        background: #03A9F4;
+    }
+
+        .pagination li.active a:hover {
+            background: #0397d6;
+        }
+
+    .pagination li.disabled i {
+        color: #ccc;
+    }
+
+    .pagination li i {
+        font-size: 16px;
+        padding-top: 6px
+    }
+
+.hint-text {
+    float: left;
+    margin-top: 10px;
+    font-size: 13px;
+}
+/* Custom checkbox */
+.custom-checkbox {
+    position: relative;
+}
+
+    .custom-checkbox input[type="checkbox"] {
+        opacity: 0;
+        position: absolute;
+        margin: 5px 0 0 3px;
+        z-index: 9;
+    }
+
+    .custom-checkbox label:before {
+        width: 18px;
+        height: 18px;
+    }
+
+    .custom-checkbox label:before {
+        content: '';
+        margin-right: 10px;
+        display: inline-block;
+        vertical-align: text-top;
+        background: white;
+        border: 1px solid #bbb;
+        border-radius: 2px;
+        box-sizing: border-box;
+        z-index: 2;
+    }
+
+    .custom-checkbox input[type="checkbox"]:checked + label:after {
+        content: '';
+        position: absolute;
+        left: 6px;
+        top: 3px;
+        width: 6px;
+        height: 11px;
+        border: solid #000;
+        border-width: 0 3px 3px 0;
+        transform: inherit;
+        z-index: 3;
+        transform: rotateZ(45deg);
+    }
+
+    .custom-checkbox input[type="checkbox"]:checked + label:before {
+        border-color: #03A9F4;
+        background: #03A9F4;
+    }
+
+    .custom-checkbox input[type="checkbox"]:checked + label:after {
+        border-color: #fff;
+    }
+
+    .custom-checkbox input[type="checkbox"]:disabled + label:before {
+        color: #b8b8b8;
+        cursor: auto;
+        box-shadow: none;
+        background: #ddd;
+    }
+/* Modal styles */
+.modal .modal-dialog {
+    max-width: 400px;
+}
+
+.modal .modal-header, .modal .modal-body, .modal .modal-footer {
+    padding: 20px 30px;
+}
+
+.modal .modal-content {
+    border-radius: 3px;
+}
+
+.modal .modal-footer {
+    background: #ecf0f1;
+    border-radius: 0 0 3px 3px;
+}
+
+.modal .modal-title {
+    display: inline-block;
+}
+
+.modal .form-control {
+    border-radius: 2px;
+    box-shadow: none;
+    border-color: #dddddd;
+}
+
+.modal textarea.form-control {
+    resize: vertical;
+}
+
+.modal .btn {
+    border-radius: 2px;
+    min-width: 100px;
+}
+
+.modal form label {
+    font-weight: normal;
+}
+
+/*Doctoret*/
+
+.our-team-section {
+    position: relative;
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+    .our-team-section:before {
+        position: absolute;
+        top: 0;
+        left: 0;
+        content: " ";
+        background: url(img/service-section-bottom.png);
+        background-size: 100% 100px;
+        width: 100%;
+        height: 100px;
+        float: left;
+        z-index: 99;
+    }
+
+.our-team {
+    padding: 30px 0 40px;
+    background: #f9f9f9;
+    text-align: center;
+    overflow: hidden;
+    position: relative;
+    border-bottom: 5px solid #496983;
+}
+
+    .our-team:hover {
+        border-bottom: 5px solid #2f2f2f;
+    }
+
+    .our-team .pic {
+        display: inline-block;
+        width: 130px;
+        height: 130px;
+        margin-bottom: 50px;
+        z-index: 1;
+        position: relative;
+    }
+
+        .our-team .pic:before {
+            content: "";
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            background: #496983;
+            position: absolute;
+            bottom: 135%;
+            right: 0;
+            left: 0;
+            opacity: 1;
+            transform: scale(3);
+            transition: all 0.3s linear 0s;
+        }
+
+    .our-team:hover .pic:before {
+        height: 100%;
+        background: #2f2f2f;
+    }
+
+    .our-team .pic:after {
+        content: "";
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 1;
+        transition: all 0.3s linear 0s;
+    }
+
+    .our-team:hover .pic:after {
+        background: #083a61;
+    }
+
+    .our-team .pic img {
+        width: 100%;
+        height: auto;
+        border-radius: 50%;
+        transform: scale(1);
+        transition: all 0.9s ease 0s;
+        box-shadow: 0 0 0 14px #f7f5ec;
+        transform: scale(0.7);
+        position: relative;
+        z-index: 2;
+    }
+
+
+
+    .our-team:hover .social {
+        bottom: 0;
+    }
+
+    .our-team .social li {
+        display: inline-block;
+    }
+
+
+
+@media only screen and (max-width: 990px) {
+    .our-team {
+        display: inherit;
+    }
+
+    .team-content {
+        margin-top: 12%;
+    }
+}
+
+/*CreateForm*/
+
+#formcreate {
+    position: relative;
+    top: 75px;
+    max-width: 678px;
+    margin: 0 auto;
+    overflow: hidden;
+    padding: 20px 40px;
+    border-radius: 1%;
+    background-color: rgb(209 209 209);
+    box-shadow: 2px 7.5px 5px 2px rgba(0, 0, 0, 0.5);
+    color: black;
+}
+
+label {
+    font-family: inherit;
+    font-size: 1.625em;
+    text-shadow: 0 0 2px rgb(255, 255, 255);
+}
+
+.createbuttons input {
+    width: 100%;
+    height: 50px;
+    outline: none;
+    margin-top: 5px;
+    padding-left: 10px;
+    border: 0;
+    border-radius: 2.5px;
+    font-family: monospace;
+    font-size: 13px;
+}
+
+
+#buttonsCreate input {
+    float: right;
+    padding: 1px 17px;
+    cursor: pointer;
+    outline: none;
+    font-size: 26px;
+    font-family: inherit;
+    background-color: #3e5669;
+    color: white;
+}
+
+.editbuton {
+    float: left;
+    padding: 4px 10px;
+    cursor: pointer;
+    outline: none;
+    font-size: 26px;
+    font-family: inherit;
+    background-color: #4dbdc5;
+    color: white;
+}
+
+
+.form-group {
+    margin: 20px 0;
+}
+
+/*Details*/
+
+
+.wrapper {
+    display: flex;
+    border-radius: 7px;
+    border: 1px solid lightgray;
+    box-shadow: 2px 2px 40px 2px;
+    margin: 5.5em 3em;
+}
+
+.profile-image {
+    flex: 1;
+    padding: 1.5em 0;
+}
+
+.image {
+    height: 200px;
+    width: 200px;
+    background: orange;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 50%;
+}
+
+.profile-info {
+    flex: 3;
+    align-self: center;
+    display: flex;
+}
+
+.follow {
+    flex: 1;
+    margin: 10px;
+    align-self: center;
+}
+
+.info {
+    flex: 8;
+}
+
+.editDetails {
+    float: left;
+    padding: 4px 10px;
+    cursor: pointer;
+    outline: none;
+    font-size: 26px;
+    font-family: inherit;
+    background-color: #4dbdc5;
+    color: white;
+}
+
+
+
+#nav .active a {
+    background-color: rgb(37 68 94) !important;
+    border-radius: 50px;
+}
+
+input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+}
+
+input[type=submit] {
+    background-color: #3e5669;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+    input[type=submit]:hover {
+        background-color: #45a049;
+    }
+
+#contactus {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+    margin-top: 5%;
+}
+
+/*Login-reg*/
+
+registerform {
+    width: 50%;
+    height: 64vh;
+    background: white;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.leftpart, .right {
+    width: 50%;
+}
+
+.leftpart {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+}
+
+    .leftpart img {
+        width: 80px;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+        border-radius: 100%;
+    }
+
+    .leftpart input {
+        margin: 10px;
+        width: 100%;
+        color: rgba(0,0,0,.68);
+        font-size: .88em;
+        padding: 23px 14px;
+        background: #eee;
+        border-radius: 30px;
+    }
+
+    .leftpart button {
+        margin: 10px;
+        width: 25%;
+        color: rgba(0,0,0,.68);
+        font-size: .88em;
+        background: #eee;
+        border-radius: 30px;
+    }
+
+    .leftpart h1 {
+        width: 100%;
+        text-align: center;
+    }
+
+
+.fotoright {
+    overflow: hidden;
+}
+
+    .fotoright img {
+        width: 70%;
+        margin-top: 97px;
+    }
+
+
+@media only screen and (max-width: 800px) {
+    .leftpart, .fotoright {
+        width: 100%;
+    }
+
+    .fotoright {
         display: none;
     }
 }
