--- a/LaboratoriAnalizav/LaboratoriAnalizav/Views/Doctor/Index.cshtml
+++ b/LaboratoriAnalizav/LaboratoriAnalizav/Views/Doctor/Index.cshtml
@@ -1,26 +1,39 @@
-﻿@using LaboratoriAnalizav.Models;
-@{
-    ViewData["Title"] = "Doctoret";
-    var doctor = (List<Doctor>)ViewData["Doctor"];
+﻿@section Scripts {
+    <script src="~/lib/Vue/vue.min.js"></script>
+    <script src="~/lib/axios/axios.min.js"></script>
+    <script>
+        var app = new Vue({
+            el: '#doctors',
+            data: {
+                doctors: [],
+            },
+            mounted() {
+                axios.get('http://localhost:4000/doctors', {
+                    headers: {
+                        'content-type': 'application/json',
+                    }
+                }).then(res => {
+                    this.doctors = res.data;
+                });
+            }
+        })
+    </script>
 }
 
-<div class="container">
+<div class="container" id="doctors">
     <div class="row">
         <div class="col-lg-3 col-md-6 col-sm-6" style="display: -webkit-inline-box;">
-            @foreach (var dc in doctor)
-            {
-                <div class="our-team" style="margin: 6%;width: 100%;">
-                    <div class="pic">
-                        <img src="~/images/gjaku.jpg">
-                    </div>
-                    <div class="team-content">
-                        <h3 class="title">@dc.FirstName</h3>
-                        <p><strong>Email: </strong>@dc.Email</p>
-                        <p><strong>Phone: </strong> @dc.Telephone </p>
-                        <p><strong>Description: </strong> @dc.Description</p>
-                    </div>
+            <div class="our-team" style="margin: 6%;width: 100%;" v-for="(doctor, index) in doctors" :key="index">
+                <div class="pic">
+                    <img src="~/images/gjaku.jpg">
                 </div>
-            }
+                <div class="team-content">
+                    <h3 class="title">{{doctor.name}}</h3>
+                    <p><strong>Email: </strong>{{doctor.email}}</p>
+                    <p><strong>Phone: </strong>{{doctor.phone}}</p>
+                    <p><strong>Description: </strong>{{doctor.description}}</p>
+                </div>
+            </div>
         </div>
     </div>
 
