--- a/LaboratoriAnalizav/LaboratoriAnalizav/Views/SendMailDto/Create.cshtml
+++ b/LaboratoriAnalizav/LaboratoriAnalizav/Views/SendMailDto/Create.cshtml
@@ -1,66 +1,28 @@
-﻿
-@model IEnumerable<LaboratoriAnalizav.Models.SendMailDto>
-@using ReflectionIT.Mvc.Paging;
-
+﻿@model SendMailDto
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "ContactUs";
 }
 
+<div class="container" id="contactus">
+    <form asp-action="Create" method="post" id="create-form">
+        @Html.AntiForgeryToken()
+        <label asp-for="@Model.Name">First Name</label>
+        <input type="text" asp-for="@Model.Name" id="fname" name="Name" placeholder="Your name..">
+        <span class="text-danger" asp-validation-for="@Model.Name"></span>
 
-<div class="container tableTerminet">
-    <div class="table-wrapper">
-        <div class="table-title">
-            <div class="">
-                <h3>Messsages from Contact </h3>
-            </div>
-        </div>
-        <table class="table table-striped table-hover">
-            <thead>
+        <label asp-for="@Model.LastName">Last Name</label>
+        <input type="text" asp-for="@Model.LastName" id="lname" name="LastName" placeholder="Your last name..">
+        <span class="text-danger" asp-validation-for="@Model.LastName"></span>
 
-                <tr>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Name)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.LastName)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Subject)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Message)
-                    </th>
-
-                </tr>
-            </thead>
-            <tbody id="myTable">
-                @foreach (var item in Model)
-                {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Name)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.LastName)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Subject)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Message)
-                        </td>
+        <label asp-for="@Model.Subject">Subject</label>
+        <input type="text" asp-for="@Model.Subject" id="subject" name="Subject" placeholder="Your last subject..">
+        <span class="text-danger" asp-validation-for="@Model.Subject"></span>
 
 
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
-    <nav aria-label="Terminet Paging">
-        @await this.Component.InvokeAsync("Pager", new { pagingList = this.Model })
-    </nav>
+        <label asp-for="@Model.Message">Message</label>
+        <textarea id="Message" asp-for="@Model.Message" name="Message" placeholder="Write something.." style="height:200px"></textarea>
+        <span class="text-danger" asp-validation-for="@Model.Message"></span>
+
+        <input type="submit" value="Create">
+    </form>
 </div>
-
-
-
-
